Collapsing Categories Changelog

* 0.7 (2008/11/22)
    * Cookie handling now affects categories that are expanded by default too
    * Can now be used either as a widget or manually

* 0.6.6 (2008/11/21)
    * Added a float left to .sym css to make it compatible with more themes

* 0.6.5 (2008/11/18)
    * Now uses cookies to keep categories expanded if they have been clicked on

* 0.6.4 (2008/11/10)
    * Fixed a minor bug in with animation option not being properly set by
      default

* 0.6.3 (2008/10/03)
    * Added option to animate expanding and collapsing
    * Added option to add rss feeds for each category

* 0.6.2 (2008/09/11)
    * Fixed display of expand and collapse symbols when using images
    * Improved font handling and styling of text symbols

* 0.6.1 (2008/09/01)
    * Improved styling so that collapsing and expanding symbols use a
      fixed-width font, but category names do not
    * When using the option to have category names trigger expansion, and not
      showing posts, categories with no subcategories now link to the category
    * Added option to use images instead of html for collapse/expand characters
    * +/- now uses UTF-8 encoding instead of html entities (may not work for
      pages not encoded in UTF-8
    
* 0.6 (2008/08/27)
    * Can have multiple instances of widgets, each with separate options
    * No longer works as non-widget
    * All options are stored in one database row
    * Added more sorting options
    * Added option to include or exclude certain categories
    * Added option to expand certain categories by default
    * Added option to have category names either link to category archive or to
      activate expanding and collapsing

* 0.5.10 (2008/08/20)
    * minor bug fix. Fixed option to optionally show pages

* 0.5.9 (2008/08/07)
    * minor bug fix - added space before category count
    * Added option to sort by category (term) order