@@ -1,5 +1,5 @@
 /*
-collapsCat Categories version: 0.6.6
+collapsCat Categories version: 0.7
 Copyright 2007 Robert Felty
 
 This work is largely based on the Fancy Categories plugin by Andrew Rader
